# TraceQuarry

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  OWNERSHIP.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  secret-scan.yml  snyk.yml
assets/: tracequarry-brand.md
docs/: mvp.md  public-release-checklist.md
docs/media/: tracequarry-walkthrough.webm
rules/: README.md  actors.yml  investigation_profiles.yml  linux_ttps.yml  tagging_registry.yml  tools.yml
skills/tracequarry/: LICENSE  NOTICE  SKILL.md
skills/tracequarry/agents/: openai.yaml
skills/tracequarry/references/: evidence-and-output-guide.md  investigation-pivots.md
tests/: test_agent_skill.py  test_archive.py  test_assist.py  test_cli.py  test_dependency_manifest.py  test_findings.py  test_forensic_coverage.py  test_iocs.py  test_parser_accounts.py  test_parser_auth.py  test_parsers_runtime.py  test_pipeline.py  test_resources.py  test_rule_registry.py  test_timeline_engine.py  test_timestamp.py  test_web.py
tests/fixtures/: README.md
tests/fixtures/uac_sample/: bodyfile.txt  getcap.txt  login_history.txt
tests/fixtures/uac_sample/etc/: group  ld.so.preload  passwd  shadow  sudoers
tests/fixtures/uac_sample/etc/cron.d/: update
tests/fixtures/uac_sample/etc/pam.d/: sshd
tests/fixtures/uac_sample/etc/profile.d/: update.sh
tests/fixtures/uac_sample/etc/systemd/system/: kworker.service
tests/fixtures/uac_sample/root/: .bash_history
tests/fixtures/uac_sample/root/.ssh/: authorized_keys  known_hosts
tests/synthetic_uac/: SYNTHETIC_UAT_REPORT.md  manifest.json
tools/: check_repository_hygiene.py  configure_github_security.sh  generate_synthetic_uac.py  package_agent_skill.py
uac_parser/: __init__.py  assist.py  cli.py  pipeline.py  resources.py  rules_cli.py  web.py
uac_parser/enrich/: correlation.py  iocs.py  rule_registry.py  storylines.py  ttp_rules.py
uac_parser/loaders/: archive.py  uac_layout.py
uac_parser/output/: permissions.py  writers.py
uac_parser/parsers/: __init__.py  account_diff.py  accounts.py  auditd.py  auth.py  bodyfile.py  common.py  journal.py  login.py  network.py  persistence.py  privilege.py  processes.py  simple.py  ssh.py  syslog.py
uac_parser/timeline/: engine.py  event.py  timestamp.py
