[project]
name = "tracequarry"
version = "0.4.0b1"
description = "TraceQuarry: UAC-aware Linux forensic timeline parser with TTP enrichment."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{name = "Kensho"}]
maintainers = [{name = "Chill Ethical People", email = "contact@chillethicalpeople.com"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "OWNERSHIP.md"]
keywords = ["dfir", "forensics", "incident-response", "linux", "timeline", "uac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["PyYAML>=6.0.2,<7"]

[project.urls]
Homepage = "https://github.com/Chill-Ethical-People/TraceQuarry"
Documentation = "https://github.com/Chill-Ethical-People/TraceQuarry#readme"
Issues = "https://github.com/Chill-Ethical-People/TraceQuarry/issues"
Security = "https://github.com/Chill-Ethical-People/TraceQuarry/security/policy"

[project.optional-dependencies]
dev = [
    "bandit>=1.8,<2",
    "build>=1.2,<2",
    "coverage>=7.6,<8",
    "mypy>=1.15,<3",
    "packaging>=24,<27",
    "pip-audit>=2.8,<3",
    "pytest>=8,<10",
    "ruff>=0.15,<0.16",
    "twine>=6,<7",
    "types-PyYAML>=6.0.12,<7",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["uac_parser"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["tests"]
# These literals are evidence values parsed by TraceQuarry, not bind addresses,
# temporary-file creation, or SQL construction.
skips = ["B104", "B108", "B608"]

[tool.coverage.run]
source = ["uac_parser"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
tracequarry = "uac_parser.cli:main"
tracequarry-web = "uac_parser.web:main"
tracequarry-rules = "uac_parser.rules_cli:main"
uac-timeline = "uac_parser.cli:main"
uac-timeline-web = "uac_parser.web:main"

[tool.setuptools.packages.find]
include = ["uac_parser*"]

[tool.setuptools.data-files]
"share/tracequarry/rules" = ["rules/tagging_registry.yml", "rules/investigation_profiles.yml", "rules/README.md"]
"share/tracequarry/assets" = ["assets/cep-mark.svg", "assets/tracequarry-favicon.svg", "assets/tracequarry-lockup.svg"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
